Add test for InMemoryTaskManager.getEpicSubtasks() + some fixes